default/objects/CRUSH_Settings_Obj__c/CRUSH_Settings_Obj__c.object-meta.xml
<CustomObject>
    <description>The object that holds the organization wide and user specific settings for CRUSH.</description>
    <label>CRUSH Settings</label>
    <nameField>
        <displayFormat>CRUSH-{0000}</displayFormat>
        <label>CRUSH Settings Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CRUSH Settings</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>