default/objects/CRUSH_Settings_Obj__c/fields/Account_Plan_Transfer_User__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan_Transfer_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Plan Transfer User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CRUSH_Settings_Plan_Transfer</relationshipName>
    <type>Lookup</type>
</CustomField>