default/objects/CRUSH_Settings_Obj__c/fields/Allow_Add_Tasks_From_Objective_Component__c.field-meta.xml
<CustomField>
    <fullName>Allow_Add_Tasks_From_Objective_Component__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box to allow users to add tasks from the Objective Component</description>
    <inlineHelpText>Check this box to allow users to add tasks from the Objective Component</inlineHelpText>
    <label>Allow Add Tasks From Objective Component</label>
    <type>Checkbox</type>
</CustomField>