default/objects/CRUSH_Settings_Obj__c/fields/Auto_Create_Relationship_Maps__c.field-meta.xml
<CustomField>
    <fullName>Auto_Create_Relationship_Maps__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When checked will allow the system to auto create a map if one isn&apos;t found (and user has permissions) when accessing the Relationship Map component</description>
    <label>Auto Create Relationship Maps</label>
    <type>Checkbox</type>
</CustomField>