default/objects/CRUSH_Settings_Obj__c/fields/Contacts_Ancestry_Levels__c.field-meta.xml
<CustomField>
    <fullName>Contacts_Ancestry_Levels__c</fullName>
    <defaultValue>2</defaultValue>
    <description>The number of levels to query when displaying the Hierarchy Chart of Contacts</description>
    <label>Contacts Ancestry Levels</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>