default/objects/CRUSH_Settings_Obj__c/fields/Disabled_Objective_Sort_Button__c.field-meta.xml
<CustomField>
    <fullName>Disabled_Objective_Sort_Button__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box to disable Objective Component Sort Button</description>
    <inlineHelpText>Check this box to disable Objective Component Sort Button</inlineHelpText>
    <label>Diable Objective Component Sort Button</label>
    <type>Checkbox</type>
</CustomField>