default/objects/CRUSH_Settings_Obj__c/fields/Enable_Notifications__c.field-meta.xml
<CustomField>
    <fullName>Enable_Notifications__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable Notifications</label>
    <type>Checkbox</type>
</CustomField>