default/objects/CRUSH_Settings_Obj__c/fields/Enable_Objective_Stage_Based_On_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Enable_Objective_Stage_Based_On_Tasks__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box to enable objective stage based on tasks</description>
    <inlineHelpText>Check this box to enable objective stage based on tasks</inlineHelpText>
    <label>Enable objective stage based on tasks</label>
    <type>Checkbox</type>
</CustomField>