default/objects/CRUSH_Settings_Obj__c/fields/Goal_Updated__c.field-meta.xml
<CustomField>
    <fullName>Goal_Updated__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Goal Updated</label>
    <type>Checkbox</type>
</CustomField>