default/objects/CRUSH_Settings_Obj__c/fields/Objective_High_Color__c.field-meta.xml
<CustomField>
    <fullName>Objective_High_Color__c</fullName>
    <description>The RGB color when the number of objectives completed is High (in format #aabbcc)</description>
    <inlineHelpText>The RGB color when the number of objectives completed is in High (in format #aabbcc)</inlineHelpText>
    <label>Objective High Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>