default/objects/CRUSH_Settings_Obj__c/fields/Objective_Low_Middle_Boundary__c.field-meta.xml
<CustomField>
    <fullName>Objective_Low_Middle_Boundary__c</fullName>
    <description>The boundary between low &amp; middle.  Anything below this value is considered low.</description>
    <inlineHelpText>The boundary between low &amp; middle.  Anything below this value is considered low.</inlineHelpText>
    <label>Objective Low Middle Boundary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>