default/objects/CRUSH_Settings_Obj__c/fields/Objective_Middle_Color__c.field-meta.xml
<CustomField>
    <fullName>Objective_Middle_Color__c</fullName>
    <description>The RGB color when the number of objectives completed is in the middle (in format #aabbcc)</description>
    <inlineHelpText>The RGB color when the number of objectives completed is in the middle (in format #aabbcc)</inlineHelpText>
    <label>Objective Middle Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>