default/objects/CRUSH_Settings_Obj__c/fields/Objective_Task_High_Color__c.field-meta.xml
<CustomField>
    <fullName>Objective_Task_High_Color__c</fullName>
    <description>The RGB color when the number of objective tasks completed is high (in format #aabbcc)</description>
    <inlineHelpText>The RGB color when the number of objective tasks completed is high (in format #aabbcc)</inlineHelpText>
    <label>Objective Task High Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>