default/objects/CRUSH_Settings_Obj__c/fields/Objective_Task_Low_Color__c.field-meta.xml
<CustomField>
    <fullName>Objective_Task_Low_Color__c</fullName>
    <description>The RGB color when the number of objective tasks completed is low (in format #aabbcc)</description>
    <inlineHelpText>The RGB color when the number of objectives tasks completed is low (in format #aabbcc)</inlineHelpText>
    <label>Objective Task Low Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>