default/objects/CRUSH_Settings_Obj__c/fields/Org_Chart_Default_Fields__c.field-meta.xml
<CustomField>
    <fullName>Org_Chart_Default_Fields__c</fullName>
    <defaultValue>&quot;Contact.Name.Required,Contact.Title,Contact.Email,Key_Stakeholder__c.Influence__c.Required,Key_Stakeholder__c.Support__c.Required&quot;</defaultValue>
    <description>Determines the default fields for the Org Chart display</description>
    <label>Org Chart Default Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>