default/objects/CRUSH_Settings_Obj__c/fields/Score_High_Color__c.field-meta.xml
<CustomField>
    <fullName>Score_High_Color__c</fullName>
    <description>The RGB color when the score is high (in format #aabbcc)</description>
    <inlineHelpText>The RGB color when the score is high (in format #aabbcc)</inlineHelpText>
    <label>Score High Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>