default/objects/CRUSH_Settings_Obj__c/fields/Score_Low_Color__c.field-meta.xml
<CustomField>
    <fullName>Score_Low_Color__c</fullName>
    <description>The RGB color when the score is low (in format #aabbcc)</description>
    <inlineHelpText>The RGB color when the score is low (in format #aabbcc)</inlineHelpText>
    <label>Score Low Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>