default/objects/CRUSH_Settings_Obj__c/fields/Score_Mid_Color__c.field-meta.xml
<CustomField>
    <fullName>Score_Mid_Color__c</fullName>
    <description>The RGB color when the score is in the middle (in format #aabbcc)</description>
    <inlineHelpText>The RGB color when the score is in the middle (in format #aabbcc)</inlineHelpText>
    <label>Score Middle Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>