default/objects/CRUSH_Settings_Obj__c/fields/Score_Mid_High_Boundary__c.field-meta.xml
<CustomField>
    <fullName>Score_Mid_High_Boundary__c</fullName>
    <description>The boundary between middle &amp; high.  Anything equal or above this value is considered high.</description>
    <inlineHelpText>The boundary between middle &amp; high.  Anything equal or above this value is considered high.</inlineHelpText>
    <label>Score Middle High Boundary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>