default/objects/CRUSH_Settings_Obj__c/fields/Support_Colors_Long__c.field-meta.xml
<CustomField>
    <fullName>Support_Colors_Long__c</fullName>
    <defaultValue>&quot;Blocker:#FF0000;Supporter:#FFC741;Floater:#E5E1E6;Champion:#97D700;&quot;</defaultValue>
    <label>Support Colors</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>