default/objects/CRUSH_Settings_Obj__c/fields/Task_Objects_Related_Exclusions__c.field-meta.xml
<CustomField>
    <fullName>Task_Objects_Related_Exclusions__c</fullName>
    <label>Task Objects Related Exclusions</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>