default/objects/CRUSH_Settings_Obj__c/fields/Task_Objects_Related_To_Account__c.field-meta.xml
<CustomField>
    <fullName>Task_Objects_Related_To_Account__c</fullName>
    <label>Task Objects Related To Account</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>