default/objects/CRUSH_Settings_Obj__c/fields/Task_Objects_Related_To_Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>Task_Objects_Related_To_Account_Plan__c</fullName>
    <label>Task Objects Related To Account Plan</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>