default/objects/CRUSH_Settings_Obj__c/fields/Team_Member_Permission_Updated__c.field-meta.xml
<CustomField>
    <fullName>Team_Member_Permission_Updated__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Team Member Permission Updated</label>
    <type>Checkbox</type>
</CustomField>