default/objects/CRUSH_Settings_Obj__c/fields/Use_Account_Team_Permissions__c.field-meta.xml
<CustomField>
    <fullName>Use_Account_Team_Permissions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If enabled, will grant Account Plan permissions based on the Account permissions from the Account Team.</description>
    <inlineHelpText>If enabled, will grant Account Plan permissions based on the Account permissions from the Account Team.</inlineHelpText>
    <label>Use Account Team Permissions</label>
    <type>Checkbox</type>
</CustomField>