default/objects/CRUSH_Settings_Obj__c/fields/Use_Default_Account_Plan_Score__c.field-meta.xml
<CustomField>
    <fullName>Use_Default_Account_Plan_Score__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Toggle this to false to disable the built in Account Plan Scoring</description>
    <inlineHelpText>Turn off if you want to implement your own scoring to save to the Intermediate_Score__c field on account plan records</inlineHelpText>
    <label>Use Default Account Plan Scoring</label>
    <type>Checkbox</type>
</CustomField>