default/objects/CRUSH_Settings_Obj__c/fields/Use_Percentage_Account_Plan_Score__c.field-meta.xml
<CustomField>
    <fullName>Use_Percentage_Account_Plan_Score__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Toggle this to false to use old Account Plan Scoring component</description>
    <inlineHelpText>Turn off if you want to use old Account Plan Scoring component</inlineHelpText>
    <label>Use Percentage Account Plan Scoring</label>
    <type>Checkbox</type>
</CustomField>