default/objects/CRUSH_Settings_Obj__c/fields/Use_System_Create_Task_Modal__c.field-meta.xml
<CustomField>
    <fullName>Use_System_Create_Task_Modal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use the default Saleforce Task modal when adding tasks from the Objective Component</description>
    <inlineHelpText>Check this box to use the default Saleforce Task modal when adding tasks from the Objective Component</inlineHelpText>
    <label>Use System Create Task Modal</label>
    <type>Checkbox</type>
</CustomField>