default/objects/CRUSH_Settings_Obj__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Determines the user these settings are for in the case of user level settings</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CRUSH_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>