default/objects/CRUSH_Settings_Obj__c/fields/WS_Object_Filter__c.field-meta.xml
<CustomField>
    <fullName>WS_Object_Filter__c</fullName>
    <description>A list of the objects that are available to use when creating a cross-sell template.</description>
    <inlineHelpText>You should use the API name for each object and each one should be on its own line</inlineHelpText>
    <label>WS Object Filter</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>